# internal/web/users/api.gen.go
@@ -14,6 +14,14 @@ import (
 	strictecho "github.com/oapi-codegen/runtime/strictmiddleware/echo"
 )
 
+// Task defines model for Task.
+type Task struct {
+	Id     *uint   `json:"id,omitempty"`
+	IsDone *bool   `json:"is_done,omitempty"`
+	Task   *string `json:"task,omitempty"`
+	UserId *uint   `json:"user_id,omitempty"`
+}
+
 // User defines model for User.
 type User struct {
 	Id       *uint   `json:"id,omitempty"`
@@ -41,6 +49,9 @@ type ServerInterface interface {
 	// Partially update a user by ID
 	// (PATCH /users/{id})
 	PatchUsersId(ctx echo.Context, id int) error
+	// Get tasks by user ID
+	// (GET /users/{user_id}/task)
+	GetUsersUserIdTask(ctx echo.Context, userId int) error
 }
 
 // ServerInterfaceWrapper converts echo contexts to parameters.
@@ -98,6 +109,22 @@ func (w *ServerInterfaceWrapper) PatchUsersId(ctx echo.Context) error {
 	return err
 }
 
+// GetUsersUserIdTask converts echo context to params.
+func (w *ServerInterfaceWrapper) GetUsersUserIdTask(ctx echo.Context) error {
+	var err error
+	// ------------- Path parameter "user_id" -------------
+	var userId int
+
+	err = runtime.BindStyledParameterWithOptions("simple", "user_id", ctx.Param("user_id"), &userId, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter user_id: %s", err))
+	}
+
+	// Invoke the callback with all the unmarshaled arguments
+	err = w.Handler.GetUsersUserIdTask(ctx, userId)
+	return err
+}
+
 // This is a simple interface which specifies echo.Route addition functions which
 // are present on both echo.Echo and echo.Group, since we want to allow using
 // either of them for path registration
@@ -130,6 +157,7 @@ func RegisterHandlersWithBaseURL(router EchoRouter, si ServerInterface, baseURL 
 	router.POST(baseURL+"/users", wrapper.PostUsers)
 	router.DELETE(baseURL+"/users/:id", wrapper.DeleteUsersId)
 	router.PATCH(baseURL+"/users/:id", wrapper.PatchUsersId)
+	router.GET(baseURL+"/users/:user_id/task", wrapper.GetUsersUserIdTask)
 
 }
 
@@ -200,6 +228,23 @@ func (response PatchUsersId200JSONResponse) VisitPatchUsersIdResponse(w http.Res
 	return json.NewEncoder(w).Encode(response)
 }
 
+type GetUsersUserIdTaskRequestObject struct {
+	UserId int `json:"user_id"`
+}
+
+type GetUsersUserIdTaskResponseObject interface {
+	VisitGetUsersUserIdTaskResponse(w http.ResponseWriter) error
+}
+
+type GetUsersUserIdTask200JSONResponse []Task
+
+func (response GetUsersUserIdTask200JSONResponse) VisitGetUsersUserIdTaskResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(200)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
 // StrictServerInterface represents all server handlers.
 type StrictServerInterface interface {
 	// Get all users
@@ -214,6 +259,9 @@ type StrictServerInterface interface {
 	// Partially update a user by ID
 	// (PATCH /users/{id})
 	PatchUsersId(ctx context.Context, request PatchUsersIdRequestObject) (PatchUsersIdResponseObject, error)
+	// Get tasks by user ID
+	// (GET /users/{user_id}/task)
+	GetUsersUserIdTask(ctx context.Context, request GetUsersUserIdTaskRequestObject) (GetUsersUserIdTaskResponseObject, error)
 }
 
 type StrictHandlerFunc = strictecho.StrictEchoHandlerFunc
@@ -330,6 +378,31 @@ func (sh *strictHandler) PatchUsersId(ctx echo.Context, id int) error {
 		return err
 	} else if validResponse, ok := response.(PatchUsersIdResponseObject); ok {
 		return validResponse.VisitPatchUsersIdResponse(ctx.Response())
+	} else if response != nil {
+		return fmt.Errorf("unexpected response type: %T", response)
+	}
+	return nil
+}
+
+// GetUsersUserIdTask operation middleware
+func (sh *strictHandler) GetUsersUserIdTask(ctx echo.Context, userId int) error {
+	var request GetUsersUserIdTaskRequestObject
+
+	request.UserId = userId
+
+	handler := func(ctx echo.Context, request interface{}) (interface{}, error) {
+		return sh.ssi.GetUsersUserIdTask(ctx.Request().Context(), request.(GetUsersUserIdTaskRequestObject))
+	}
+	for _, middleware := range sh.middlewares {
+		handler = middleware(handler, "GetUsersUserIdTask")
+	}
+
+	response, err := handler(ctx, request)
+
+	if err != nil {
+		return err
+	} else if validResponse, ok := response.(GetUsersUserIdTaskResponseObject); ok {
+		return validResponse.VisitGetUsersUserIdTaskResponse(ctx.Response())
 	} else if response != nil {
 		return fmt.Errorf("unexpected response type: %T", response)
 	}
