# openapi/openapi.yaml
@@ -23,7 +23,7 @@ paths:
       tags:
         - tasks
       requestBody:
-        description: The task to create
+        description: The task to create by user_id
         required: true
         content:
           application/json:
@@ -76,27 +76,6 @@ paths:
       responses:
         '204':
           description: Task successfully deleted
-  /tasks/user/{user_id}:
-    get:
-      summary: Get tasks by user ID
-      tags:
-        - tasks
-      parameters:
-        - name: user_id
-          in: path
-          required: true
-          schema:
-            type: integer
-          description: ID of the user
-      responses:
-        '200':
-          description: A list of tasks for the user
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Task'
   /users:
     get:
       summary: Get all users
@@ -169,6 +148,27 @@ paths:
       responses:
         '204':
           description: User successfully deleted
+  /users/{user_id}/task:
+    get:
+      summary: Get tasks by user ID
+      tags:
+        - users
+      parameters:
+        - name: user_id
+          in: path
+          required: true
+          schema:
+            type: integer
+          description: ID of the user
+      responses:
+        '200':
+          description: A list of tasks for the user
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Task'
 components:
   schemas:
     Task:
